; ModuleID = '/home/carl/AnghaBench/systemd/src/network/extr_networkd-link.c_link_enter_failed.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/extr_networkd-link.c_link_enter_failed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }

@LINK_STATE_FAILED = common dso_local global i32 0, align 4
@LINK_STATE_LINGER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"Failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @link_enter_failed(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  %3 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %4 = call i32 @assert(%struct.TYPE_8__* %3)
  %5 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @LINK_STATE_FAILED, align 4
  %9 = load i32, i32* @LINK_STATE_LINGER, align 4
  %10 = call i64 @IN_SET(i32 %7, i32 %8, i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  br label %23

13:                                               ; preds = %1
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %15 = call i32 @log_link_warning(%struct.TYPE_8__* %14, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %16 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %17 = load i32, i32* @LINK_STATE_FAILED, align 4
  %18 = call i32 @link_set_state(%struct.TYPE_8__* %16, i32 %17)
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %20 = call i32 @link_stop_clients(%struct.TYPE_8__* %19, i32 0)
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %22 = call i32 @link_dirty(%struct.TYPE_8__* %21)
  br label %23

23:                                               ; preds = %13, %12
  ret void
}

declare dso_local i32 @assert(%struct.TYPE_8__*) #1

declare dso_local i64 @IN_SET(i32, i32, i32) #1

declare dso_local i32 @log_link_warning(%struct.TYPE_8__*, i8*) #1

declare dso_local i32 @link_set_state(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @link_stop_clients(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @link_dirty(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
